--- a/_includes/team.html
+++ b/_includes/team.html
@@ -12,9 +12,11 @@
                 <hr>
                 <p class="text-muted">단체 프로젝트 - 수업 발표 공모전</p>
                 <hr>
+                <div style="width: 500px; height: 150px;">
                 <p><strong>프로젝트 기간 :</strong>2021-09-01 ~ 2021-12-15</p>
                 <p><strong>프로젝트 도구 :</strong>Textom(텍스트 마이닝 크롤링, 분석)</p>
                 <p><strong>프로젝트 기술: </strong>Text Mining</p>
+                </div>
                 <hr>
                 <p><strong>[프로젝트 설명]</strong><br>당시 핫한 이슈였던 '메타버스'키워드에 대한 인터넷, 스마트폰 이용자의 인식을 조사하기 위한 공모전입니다.</p>
                 <br>
@@ -29,9 +31,11 @@
                     <hr>
                     <p class="text-muted">연구실 프로젝트 - 관광분야 산업연관분석</p>
                     <hr>
+                    <div style="width: 500px; height: 150px;">
                     <p><strong>프로젝트 기간 :</strong>2022-07-15 ~ 2022-08-13</p>
                     <p><strong>프로젝트 도구 :</strong>Rstudio, Excel</p>
                     <p><strong>사용 언어 :</strong> R</p>
+                    </div>
                     <hr>
                     <p><strong>[프로젝트 설명]</strong><br>R을 활용하여 국내 경제적 파급효과 분석</p>
                     <br>
@@ -45,12 +49,14 @@
                     <hr>
                     <p class="text-muted">개인 프로젝트 - 나만의 주식차트 구현하기</p>
                     <hr>
+                    <div style="width: 500px; height: 150px;">
                     <p><strong>프로젝트 기간 :</strong>2023-09-01 ~ 2023-09-22</p>
                     <p><strong>프로젝트 도구 :</strong>Eclipse, Spring-tool-suite, OracleDB, Python, GitHub
                     <P><strong>사용 기술 :</strong>Spring, MVC모델, JQuery, Bootstrap</P>
                     <p><strong>사용 언어 :</strong>JAVA, JSP, HTML/CSS/JS, SQL, Python</p>
+                    </div>
                     <hr>
-                    <p><strong>[포로젝트 설명]</strong><br>Spring FrameWork를 활용하여 2023-01-01부터의 주식 데이터를 수집 후 대시보드를 구현하는 프로젝트 입니다.</p>
+                    <p><strong>[프로젝트 설명]</strong><br>Spring FrameWork를 활용하여 2023-01-01부터의 주식 데이터를 수집 후 대시보드를 구현하는 프로젝트 입니다.</p>
                     <br>
                     <p><strong>구체적인 설명</strong><br>Python의 FinanceDataReader패키지를 활용하여 코스피에 상장된 주식 데이터를 수집한 후 원하는 기업 조회 시
                     <br>차트와 데이터의 현황, 거래량을 보여주는 프로젝트를 진행했습니다.
