--- a/_includes/services.html
+++ b/_includes/services.html
@@ -6,7 +6,7 @@
                     <h2 class="section-heading">About Me</h2>
                     <h5 class="section-subheading text-muted">김동현은 누구인가?</h5>
                     <div class="text-center">
-                    <img src="img/about/2.jpg" alt="">
+                    <img src="img/about/인증사진.jpg" alt="" width="200px" height="200px">
                     </div>
                     <br>
                     <br>
