--- a/_includes/about.html
+++ b/_includes/about.html
@@ -104,7 +104,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2022.09.23</h4>
-                                <p class="text-muted">APsP 취득<br><br>
+                                <p class="text-muted">ADsP 취득<br><br>
                                 <h4>2023.10.13</h4>
                                 <p class="text-muted">빅데이터분석기사 필기합격<br>
                             </div>
