--- a/_includes/team.html
+++ b/_includes/team.html
@@ -12,16 +12,16 @@
                     <hr>
                     <p class="text-muted">단체 프로젝트 - 수업 발표 공모전</p>
                     <hr>
-                    <div style="width: 33%; height: auto;">
+                    <div style="width: 33%; height: 50%;">
                     <p><strong>프로젝트 기간 :</strong>2021-09-01 ~ 2021-12-15</p>
                     <p><strong>프로젝트 도구 :</strong>Textom(텍스트 마이닝 크롤링, 분석)</p>
                     <p><strong>프로젝트 기술: </strong>Text Mining</p>
                     </div>
                     <hr>
-                    <div style="width: 33%; height: auto;">
+                    <div style="width: 33%; height: 50%;">
                     <p><strong>[프로젝트 설명]</strong><br>당시 핫한 이슈였던 '메타버스'키워드에 대한 인터넷, 스마트폰 이용자의 인식을 조사하기 위한 공모전입니다.</p>
                     </div>
-                    <br>
+                    <hr>
                     <p><strong>구체적인 설명</strong><br>'메타버스' 키워드와 관련된 텍스트 데이터를 수집하고 분석하여 트렌드, 감성 등을 이해하고 시각화하는 과정을 발표하는 학내 공모전입니다.</p>
                     <br>텍스트 데이터를 수집하여 데이터 전처리를 진행하고 토큰화 작업을 통해 분석 가능한 환경으로 만들고,
                     다양한 분석방법(NGRAM, TF-IDF, 감성분석, 워드클라우드)를 통해 온라인 커뮤니티의 관심도와 감성을 종합적으로 이해하고
@@ -33,16 +33,16 @@
                     <hr>
                     <p class="text-muted">연구실 프로젝트 - 관광분야 산업연관분석</p>
                     <hr>
-                    <div style="width: 33%; height: auto;">
+                    <div style="width: 33%; height: 40%;">
                     <p><strong>프로젝트 기간 :</strong>2022-07-15 ~ 2022-08-13</p>
                     <p><strong>프로젝트 도구 :</strong>Rstudio, Excel</p>
                     <p><strong>사용 언어 :</strong> R</p>
                     </div>
                     <hr>
-                    <div style="width: 33%; height: auto;">
+                    <div style="width: 33%; height: 60%;">
                     <p><strong>[프로젝트 설명]</strong><br>R을 활용하여 국내 경제적 파급효과 분석</p>
                     </div> 
-                    <br>
+                    <hr>
                     <p><strong>구체적인 설명</strong><br>한국은행에서 제공하는 산업연관표와 시장투입 비용을 통해 경제적 파급효과를 산출해내는 프로젝트입니다.
                     <br>고용 파급효과, 부가가치 파급효과, 소득 파급효과 등 총 5개의 파급효과를 산업투입 비용에 따라서 값을 도출하는 프로젝트입니다.
                     <br>내국인, 외국인에 따른 관광산업 경제효과를 분석하여 자금 투입 시 얼만큼의 영향력을 행사하는지 수치로 보여줍니다. 
@@ -53,17 +53,17 @@
                     <hr>
                     <p class="text-muted">개인 프로젝트 - 나만의 주식차트 구현하기</p>
                     <hr>
-                    <div style="width: 33%; height: auto;">
+                    <div style="width: 33%; height: 70%;">
                     <p><strong>프로젝트 기간 :</strong>2023-09-01 ~ 2023-09-22</p>
                     <p><strong>프로젝트 도구 :</strong>Eclipse, Spring-tool-suite, OracleDB, Python, GitHub
                     <P><strong>사용 기술 :</strong>Spring, MVC모델, JQuery, Bootstrap</P>
                     <p><strong>사용 언어 :</strong>JAVA, JSP, HTML/CSS/JS, SQL, Python</p>
                     </div>
                     <hr>
-                    <div style="width: 33%; height: auto;">
+                    <div style="width: 33%; height: 30%;">
                     <p><strong>[프로젝트 설명]</strong><br>Spring FrameWork를 활용하여 2023-01-01부터의 주식 데이터를 수집 후 대시보드를 구현하는 프로젝트 입니다.</p>
                     </div>
-                    <br>
+                    <hr>
                     <p><strong>구체적인 설명</strong><br>Python의 FinanceDataReader패키지를 활용하여 코스피에 상장된 주식 데이터를 수집한 후 원하는 기업 조회 시
                     <br>차트와 데이터의 현황, 거래량을 보여주는 프로젝트를 진행했습니다.
                     <br>AJAX방식을 통해 데이터를 불러온 후 CHART.JS를 활용하여 시각화하는 작업과 주식 데이터를 엑셀파일로 저장하는 기능, 관련 뉴스 출력기능을 구현했습니다.
