--- a/_includes/team.html
+++ b/_includes/team.html
@@ -16,6 +16,9 @@
                     <p><strong>프로젝트 기간 :</strong>2021-09-01 ~ 2021-12-15</p>
                     <p><strong>프로젝트 도구 :</strong>Textom(텍스트 마이닝 크롤링, 분석)</p>
                     <p><strong>프로젝트 기술: </strong>Text Mining</p>
+                    <a href="https://github.com/Donghyun0221" target="_blank">
+                       Github 주소
+                    </a>
                     </div>
                     <hr>
                     <div style="height: 100px;">
@@ -40,6 +43,9 @@
                     <p><strong>프로젝트 기간 :2022-07-15 ~ 2022-08-13</p>
                     <p><strong>프로젝트 도구 :</strong>Rstudio, Excel</p>
                     <p><strong>사용 언어 :</strong> R</p>
+                    <a href="hhttps://github.com/Donghyun0221/input-output-in-Daejeon" target="_blank">
+                        Github 주소
+                     </a>
                     </div>
                     <hr>
                     <div style="height: 100px;">
@@ -63,6 +69,9 @@
                     <p><strong>프로젝트 도구 :</strong>Eclipse, Spring-tool-suite, OracleDB, Python, GitHub
                     <P><strong>사용 기술 :</strong>Spring, MVC모델, JQuery, Bootstrap</P>
                     <p><strong>사용 언어 :</strong>JAVA, JSP, HTML/CSS/JS, SQL, Python</p>
+                    <a href="https://github.com/Donghyun0221/SpringProject" target="_blank">
+                        Github 주소
+                     </a>
                     </div>
                     <hr>
                     <div style="height: 100px;">
