--- a/_includes/services.html
+++ b/_includes/services.html
@@ -43,7 +43,7 @@
                         <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">
-                        <a href="https://github.com/Donghyun0221" target="_blank">
+                        <a href="https://github.com/Donghyun0221" target="_blank" style="color: black;">
                             GitHub: https://github.com/Donghyun0221
                         </a>
                     </h4>
