--- a/_includes/services.html
+++ b/_includes/services.html
@@ -53,7 +53,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-home fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">주소: 대전광역시 서구</h4>
+                    <h4 class="service-heading">Address: 대전광역시 서구</h4>
                 </div>
             </div>
         </div>
