--- a/_includes/team.html
+++ b/_includes/team.html
@@ -95,7 +95,9 @@
                     <br>차트와 데이터의 현황, 거래량을 보여주는 프로젝트를 진행했습니다.
                     <br>AJAX방식을 통해 데이터를 불러온 후 CHART.JS를 활용하여 시각화하는 작업과 주식 데이터를 엑셀파일로 저장하는 기능, 관련 뉴스 출력기능을 구현했습니다.
                     </p>
-            </div>
+            </div>    
+        </div>
+        <div class="row">
             <div class="col-sm-4">
                 <h4>미래융합 교육원 팀 프로젝트</h4>
                 <hr>
@@ -115,7 +117,7 @@
                 <hr>
                 <div style="height: 100px;">
                 <p><strong>[프로젝트 설명]</strong>
-                <br>대전광역시 주소 데이터 기반 에너지 사용량 제공과 예측을 통한 공공부문 탄소 중립을 위한 에너지 사용 및 탄소배출량의 지속적인 모니터링을 구현하는 웹 페이지 구현 </p>
+                <br>대전광역시 주소 데이터 기반 에너지 사용량 제공과 예측으로 공공부문 탄소 중립을 위한 에너지 사용 및 탄소배출량의 지속적인 모니터링을 구현하는 웹 페이지 구현 </p>
                 </div>
                 <hr>
                 <p><strong>구체적인 설명</strong>
@@ -124,7 +126,7 @@
                 <br>데이터 기반 구체적인 감량목표 및 실천방안을 수립 했습니다.
                 <br>행정구역별 탄소 배출 감량방안 활용 도시계획 의사결정에 이바지합니다.
                 </p>
-        </div>    
+            </div>
         </div>
     </div>
 </section>
