--- a/_includes/about.html
+++ b/_includes/about.html
@@ -40,6 +40,15 @@
                                 </p>
                             </div>
                             <div class="timeline-heading">
+                                <h4>2021-2023</h4>
+                                <h4 class="subheading">대전광역시 배재대학교 연구실 활동 수행</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">
+                                    데이터 분석 프로젝트(산업연관분석 프로젝트)<br><br> 호텔관광 관련 프로젝트(미래형 관광인재양성사업 추진전략 및 발전방향 연구 등) 다수 수행
+                                </p>
+                            </div>
+                            <div class="timeline-heading">
                                 <h4>2023.02-2023.07</h4>
                                 <h4 class="subheading">배재대학교 석사 중퇴</h4>
                             </div>
